--- a/ToenderFestival/ToenderFestival/Base.lproj/Main.storyboard
+++ b/ToenderFestival/ToenderFestival/Base.lproj/Main.storyboard
@@ -353,7 +353,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bCC-eA-1XC">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bCC-eA-1XC">
                                 <rect key="frame" x="16" y="20" width="568" height="580"/>
                                 <subviews>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="festivalspladsmap.png" translatesAutoresizingMaskIntoConstraints="NO" id="7aV-ZL-Lho">
@@ -403,7 +403,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="btD-lH-bk4" detailTextLabel="NvM-6T-HJ4" style="IBUITableViewCellStyleSubtitle" id="Pfc-1h-FCL">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="btD-lH-bk4" style="IBUITableViewCellStyleDefault" id="Pfc-1h-FCL">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Pfc-1h-FCL" id="YbU-Ye-c1X">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -411,13 +411,7 @@
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="btD-lH-bk4">
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="NvM-6T-HJ4">
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -4794,7 +4788,7 @@ Du finder Lam og Gris ved Campingindgangen.</string>
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="Sheesham, Lotus &amp; ´Son.png" translatesAutoresizingMaskIntoConstraints="NO" id="ZIe-Gy-qPg">
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="Hand Made logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="ZIe-Gy-qPg">
                                 <rect key="frame" x="16" y="28" width="568" height="278"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="redraw" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0VB-5O-Ptd" userLabel="Beskrivelse">
@@ -6817,11 +6811,11 @@ What a home, so sad and lone.</string>
         <image name="Øl.png" width="875" height="583"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="IKG-R8-hXE"/>
-        <segue reference="A3K-w7-aCJ"/>
-        <segue reference="YQb-Xh-KYE"/>
-        <segue reference="Zhn-Ed-hud"/>
+        <segue reference="YP2-Gc-UnD"/>
+        <segue reference="EPt-C8-0qY"/>
         <segue reference="hZh-bo-FbA"/>
         <segue reference="YWN-fK-ghA"/>
+        <segue reference="YQb-Xh-KYE"/>
+        <segue reference="Zhn-Ed-hud"/>
     </inferredMetricsTieBreakers>
 </document>
